# psp-bts-integral

./: .env.example  .gitignore  ARCHITECTURE.md  COMMANDS.md  DASHBOARD_PROFESIONAL_IMPLEMENTADO.md  Dockerfile  Dockerfile.production  INICIO_RAPIDO_PACIENTES.md  LOGIN_MOCK_FIX.md  MODULO_PACIENTES_COMPLETO.md  README.md  docker-compose.yml  index.html  install-and-build.ps1  nginx.conf  nginx.main.conf  nginx.production.conf  package-lock.json  package.json  start-vite.bat  start.bat  start.sh  tsconfig.json  vite.config.js  vite.config.ts
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/: pyproject.toml  template.yaml
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/: config.py  main.py  router.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/components/: audit_logger.py  consent_manager.py  data_retention_manager.py  escalation_alert_manager.py  nps_collector.py  session_counter_store.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/db/: motor_client.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/handlers/: eventbridge_dispatcher.py  scheduler_handler.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/models/: audit.py  consent.py  escalation.py  nps.py  retention.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/app/routers/: audit_router.py  consent_router.py  (+2 more)
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/dlq_processor/: handler.py
ai-dlc/agentic_interviewer_ai/services/entrevista-compliance/scripts/: init-mongodb.js
(+332 files in other folders)
