[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entrevista-compliance"
version = "0.1.0"
description = "Compliance Lambda — Audit, Consent, NPS y Retención de Datos para EntreVista AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "mangum>=0.17.0,<0.18.0",
    "motor>=3.6.0,<3.7.0",
    "pymongo>=4.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
    "aws-xray-sdk>=2.12.0",
    "uvicorn>=0.30.0",
    "entrevista-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "moto[sqs,sns,secretsmanager,kms]>=5.0.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "dlq_processor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 99
target-version = "py312"
